force-app/main/default/objects/MSBC_API_Configuration__mdt/MSBC_API_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>MSBC API Configuration</label>
    <pluralLabel>MSBC API Configurations</pluralLabel>
</CustomObject>