force-app/main/default/objects/MSBC_API_Configuration__mdt/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>Company Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>