force-app/main/default/objects/MSBC_API_Configuration__mdt/fields/Delay_Time_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Time_in_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Delay Time in Minutes</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>