force-app/main/default/objects/MSBC_API_Configuration__mdt/fields/Emails_To_Notify__c.field-meta.xml
<CustomField>
    <fullName>Emails_To_Notify__c</fullName>
    <inlineHelpText>If many email separate them by semi colon. eg : john@g.com; jack@g.com</inlineHelpText>
    <label>Emails To Notify</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>