force-app/main/default/objects/MSBC_API_Configuration__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>