force-app/main/default/objects/MSBC_API_Configuration__mdt/fields/Integration_User_Username__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_Username__c</fullName>
    <description>Integration User Username for MSBC API calls.</description>
    <label>Integration User Username</label>
    <required>true</required>
    <type>Email</type>
</CustomField>