force-app/main/default/objects/MSBC_API_Configuration__mdt/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description>Max Attempts for callouts.</description>
    <label>Max_Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>